ecli: resolve conflicts
